[project]
name = "removebackgroundsuite"
description = "A matting toolkit based on ComfyUI, supporting multiple matting models and detail processing methods."
version = "1.2.0"
license = {file = "LICENSE"}
dependencies = ["torch", "numpy", "Pillow", "torchvision", "opencv-python", "scipy", "transformers", "tqdm", "pymatting", "guided-filter", "vitmatte", "timm"]

[project.urls]
Repository = "https://github.com/whmc76/ComfyUI-RemoveBackgroundSuite"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "whmc76"
DisplayName = "ComfyUI-RemoveBackgroundSuite"
Description = "A comprehensive matting toolkit for ComfyUI with support for multiple models including BiRefNet, RMBG, and advanced mask processing capabilities."
Version = "1.2.0"
Icon = ""
includes = []
tags = ["matting", "background-removal", "image-processing", "mask-processing"]
